--- a/styles/globals.css
+++ b/styles/globals.css
@@ -181,6 +181,13 @@ body {
   opacity: 0.5;
 }
 
+
+
+
+/* KEYFRAMES ////////////////////////////////// */
+
+
+
 @keyframes animStar {
   from {
     transform: translateY(0);
@@ -230,4 +237,29 @@ body {
     transform: scale(0.75);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
+}
+
+
+
+@keyframes border-move {
+  0% { 
+    transform: translate(0, 0);
+  }
+  25% { 
+    transform: translate(calc(100% - 8px), 0);
+  }
+  50% { 
+    transform: translate(calc(100% - 8px), calc(100% - 8px));
+  }
+  75% { 
+    transform: translate(0, calc(100% - 8px));
+  }
+  100% { 
+    transform: translate(0, 0);
+  }
+}
+
+.animate-border-dot {
+  animation: border-move 4s linear infinite;
+  will-change: transform;
 }
